--- a/www/assets/json/tasks/bedroom_tasks.json
+++ b/www/assets/json/tasks/bedroom_tasks.json
@@ -146,7 +146,7 @@
                     "item": "strumpor",
                     "category": "",
                     "order": 0,
-					"optional": false
+					"optional": true
                 },
                 {
                     "item": "t-shirt",
@@ -159,6 +159,12 @@
                     "category": "",
                     "order": 0,
 					"optional": true
+                },
+				{
+                    "item": "skor",
+                    "category": "",
+                    "order": 3,
+					"optional": false
                 }
             ]
         },
@@ -335,6 +341,24 @@
                     "category": "underwear",
                     "order": 1,
 					"optional": false
+                },
+                {
+                    "item": "skarp",
+                    "category": "",
+                    "order": 0,
+					"optional": true
+                },
+                {
+                    "item": "skor",
+                    "category": "",
+                    "order": 0,
+					"optional": true
+                },
+                {
+                    "item": "keps",
+                    "category": "",
+                    "order": 0,
+					"optional": true
                 }
              ]
         },
