--- a/www/assets/json/tasks/entrance_tasks.json
+++ b/www/assets/json/tasks/entrance_tasks.json
@@ -9,26 +9,26 @@
 				{
 					"item": "",
 					"category": "shoes",
-					"order": 1,
+					"order": 0,
 					"optional": false
 					
 				},
 				{
                     "item": "jacka",
 					"category": "",
-					"order": 1,
+					"order": 0,
 					"optional": false
 				},
 				{
 					"item": "vantar",
 					"category": "",
-					"order": 2,
+					"order": 0,
 					"optional": false
 				},
 				{
 					"item": "mossa",
 					"category": "",
-					"order": 2,
+					"order": 0,
 					"optional": false
 				},
 				{
@@ -550,6 +550,12 @@
 					"optional": false
 				},
 				{
+					"item": "",
+					"category": "fruit",
+					"order": 1,
+					"optional": true
+				},
+				{
 					"item": "vattenkanna",
 					"category": "",
 					"order": 4,
@@ -567,12 +573,6 @@
 					"category": "plant",
 					"order": 5,
 					"optional": false
-				},
-				{
-					"item": "",
-					"category": "fruit",
-					"order": 1,
-					"optional": true
 				}
 			]
 		},
@@ -630,14 +630,14 @@
 				{
 					"item": "stovlar",
 					"category": "",
-					"order": 1,
+					"order": 0,
 					"optional": false					
 				},
 				{
                     "item": "jacka",
 					"category": "",
-					"order": 1,
-					"optional": false
+					"order": 0,
+					"optional": true
 				},
 				{
 					"item": "paraply",
@@ -647,6 +647,18 @@
 				},
 				{
 					"item": "ryggsack",
+					"category": "",
+					"order": 0,
+					"optional": true
+				},
+				{
+					"item": "mossa",
+					"category": "",
+					"order": 0,
+					"optional": true
+				},
+				{
+					"item": "vantar",
 					"category": "",
 					"order": 0,
 					"optional": true
