--- a/www/assets/json/tasks/bedroom_tasks.json
+++ b/www/assets/json/tasks/bedroom_tasks.json
@@ -217,19 +217,19 @@
                 {
                     "item": "dator",
                     "category": "",
-                    "order": 1,
+                    "order": 0,
 					"optional": false
                 },
                 {
                     "item": "vackarklocka",
                     "category": "",
-                    "order": 1,
+                    "order": 0,
 					"optional": false
                 },
                 {
                     "item": "",
                     "category": "furniture",
-                    "order": 1,
+                    "order": 0,
 					"optional": true
                 }
             ]
@@ -262,7 +262,7 @@
                     "item": "",
                     "category": "underwear",
                     "order": 1,
-					"optional": true
+					"optional": false
                 }
             ]
         },
@@ -356,6 +356,12 @@
                 },
                 {
                     "item": "keps",
+                    "category": "",
+                    "order": 0,
+					"optional": true
+                },
+                {
+                    "item": "strumpor",
                     "category": "",
                     "order": 0,
 					"optional": true
